[project]
name = "datasette-debug-actors-from-ids"
version = "0.1a0"
description = "Datasette plugin for trying out the actors_from_ids hook"
readme = "README.md"
authors = [{name = "Simon Willison"}]
license = {text = "Apache-2.0"}
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Framework :: Datasette",
]
dependencies = [
    "datasette"
]

[project.urls]
Homepage = "https://github.com/datasette/datasette-debug-actors-from-ids"
Changelog = "https://github.com/datasette/datasette-debug-actors-from-ids/releases"
Issues = "https://github.com/datasette/datasette-debug-actors-from-ids/issues"
CI = "https://github.com/datasette/datasette-debug-actors-from-ids/actions"

[project.entry-points.datasette]
debug_actors_from_ids = "datasette_debug_actors_from_ids"

[project.optional-dependencies]
test = ["pytest", "pytest-httpx", "pytest-asyncio"]